<resources>
    <string name="app_name">BasicAssessments</string>
    <string name="corys_name">Supreme Leader</string>
    <string name="title_activity_assessment_menu">AssessmentMenu</string>
    <string name="tab_quarter_1">Q1</string>
    <string name="tab_quarter_2">Q2</string>
    <string name="tab_quarter_3">Q3</string>
    <string name="tab_quarter_4">Q4</string>
    <string name="student_name">Bugs Bunny</string>
    <string name="title_assessments">Assessments</string>
    <string name="btn_shape_identification">Shapes</string>
    <string name="btn_letter_identification">Letters</string>
    <string name="btn_number_identification">Numbers</string>
    <string name="btn_sound_identification">Sounds</string>
    <string name="btn_count_100">Counting</string>
    <string name="Start">Start</string>
    <string name="carrot_trail">Current Student>Bugs Bunny</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="btn_next">Next</string>
    <string name="question_num">Questions 1/8</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ElementTitle">Question Area</string>


</resources>
